# gpod

./: .gitignore  README.md  pyproject.toml
gpod/: Caddyfile  manage.py
gpod/answers/: models.py
gpod/answers/migrations/: 0001_initial.py  0002_answer_pod.py
gpod/gpod/: asgi.py  settings.py  urls.py  wsgi.py
gpod/pictures/: admin.py  models.py  views.py
gpod/pictures/migrations/: 0001_initial.py
gpod/templates/pictures/: main.html
