[tool.poetry]
name = "gpod"
version = "0.1.0"
description = "Guess the picture of the day"
authors = ["Ghislain Leveque <ghislain@leveque.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
